--- a/templates/items.html
+++ b/templates/items.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>
-            PayLaterService
-    </title>
+    <title>Items</title>
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
@@ -18,14 +16,12 @@
             </ul>
         </nav>
     </div>
-
-   
-        <div class="main-div">
-                <h1>Pay Later Service</h1>
-        </div>
-
-    <div class="footer-div">
-        <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
+    <div class="items-div">
+        <form action="" method="post">
+            <input type="text" required placeholder="Item Name" required name="i_name">
+            <input type="number" required placeholder="Item Cost" required name="i_cost">
+            <button type="submit">Add Item</button>
+        </form>
     </div>
 </body>
 </html>
