--- a/templates/u_login.html
+++ b/templates/u_login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>
-            PayLaterService
+       User-Login
     </title>
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
@@ -18,14 +18,14 @@
             </ul>
         </nav>
     </div>
-
-   
-        <div class="main-div">
-                <h1>Pay Later Service</h1>
-        </div>
-
-    <div class="footer-div">
-        <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
-    </div>
+    
+     <div class="user-login">
+        <form action="" method="post"> 
+            <input type="email" placeholder="email" required name="u_email">
+            <input type="password" placeholder="password" required name="u_pwd">
+            <button type="submit">Login</button>
+            <button type="submit">Register</button>
+        </form>
+    </div>
 </body>
 </html>
