--- a/templates/m_register.html
+++ b/templates/m_register.html
@@ -28,5 +28,9 @@
             <button type="submit">Register</button>
         </form>
     </div>
+
+    <div class="footer-div">
+        <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
+    </div>
 </body>
 </html>
