--- a/templates/mng_login.html
+++ b/templates/mng_login.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>
-        Merchant-Login
-    </title>
+    <title>Items</title>
     <link rel="stylesheet" href="../static/css/style.css">
-    </head>
+</head>
 <body>
     <div class="nav-div">
         <nav>
@@ -18,7 +16,7 @@
             </ul>
         </nav>
     </div>
-
+    
  <div class="merchant-login">  <!--change class-name-->
     <form action="login", method="post">  
       <input type="email" placeholder="email" required name="u_email">
@@ -30,9 +28,19 @@
     </form>
   </div>
 
+<div class="user-login">
+    <form action="" method="post"> 
+        <input type="email" placeholder="email" required name="u_email">
+        <input type="password" placeholder="password" required name="u_pwd">
+        <button type="submit">Login</button>
+    </form>
+    <form action="",method = "post">
+        <button type="submit">Register</button>
+    </form>
+    </div>
+
 <div class="footer-div">
     <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
 </div>
 
-</body>
-</html>
+</body></html>
