--- a/templates/u_register.html
+++ b/templates/u_register.html
@@ -27,5 +27,8 @@
     <button type="submit">Submit</button>
 </form>
 </div>
+<div class="footer-div">
+    <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
+</div>
 </body>
 </html>
