--- a/templates/items.html
+++ b/templates/items.html
@@ -23,5 +23,10 @@
             <button type="submit">Add Item</button>
         </form>
     </div>
+
+    <div class="footer-div">
+        <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
+    </div>
+    
 </body>
 </html>
