--- a/templates/u_login.html
+++ b/templates/u_login.html
@@ -18,14 +18,20 @@
             </ul>
         </nav>
     </div>
-    
+
      <div class="user-login">
         <form action="" method="post"> 
             <input type="email" placeholder="email" required name="u_email">
             <input type="password" placeholder="password" required name="u_pwd">
             <button type="submit">Login</button>
+        </form>
+        <form action="",method = "post">
             <button type="submit">Register</button>
         </form>
     </div>
+
+<div class="footer-div">
+    <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
+</div>
 </body>
 </html>
