--- a/templates/items.html
+++ b/templates/items.html
@@ -17,7 +17,7 @@
         </nav>
     </div>
     <div class="items-div">
-        <form action="" method="post">
+        <form action="/items" method="post">
             <input type="text" required placeholder="Item Name" required name="i_name">
             <input type="number" required placeholder="Item Cost" required name="i_cost">
             <button type="submit">Add Item</button>
@@ -27,6 +27,6 @@
     <div class="footer-div">
         <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
     </div>
-    
+
 </body>
 </html>
