--- a/templates/mng_login.html
+++ b/templates/mng_login.html
@@ -29,12 +29,12 @@
   </div>
 
 <div class="user-login">
-    <form action="" method="post"> 
+    <form action="/m_login" method="post"> 
         <input type="email" placeholder="email" required name="u_email">
         <input type="password" placeholder="password" required name="u_pwd">
         <button type="submit">Login</button>
     </form>
-    <form action="",method = "post">
+    <form action="/m_register",method = "post">
         <button type="submit">Register</button>
     </form>
     </div>
