--- a/templates/u_register.html
+++ b/templates/u_register.html
@@ -19,7 +19,7 @@
         </nav>
     </div>
 <div class="user-register">
-<form action="" method="post">
+<form action="/u_register" method="post">
     <input type="text" placeholder="name" required name="u_name">
     <input type="email"  placeholder="email" required name="u_email">
     <input type="number"  placeholder="phone_num" required name="phone_num">
