--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,16 +24,18 @@
 .main-div{
     float: left;
     width: 100%;
-    background: url("../images/payment_image.jpg");
+    background: url("../images/pls1.jpg");
     background-size: 100% 100%;
     height: 590px;
 }
 .main-div h1{
     float: left;
     width: 50%;
-    margin: 10% 0% 0% 25%;
+    margin: 3% 0% 0% 29%;
     text-align: center;
     font-size: 50px;
+    font-family: "Rubik Doodle Shadow", system-ui;
+    font-weight: 400;
 }
 
 .footer-div{
