--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
             PayLaterService
     </title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="nav-div">
