--- a/templates/m_login.html
+++ b/templates/m_login.html
@@ -20,12 +20,12 @@
     </div>
 
  <div class="merchant-login">  <!--change class-name-->
-    <form action="login", method="post">  
+    <form action="m_login", method="post">  
       <input type="email" placeholder="email" required name="u_email">
       <input type="password" placeholder="password" required name="u_pwd">
       <button type="submit">Login</button>
     </form>
-    <form action="",method = "post">
+    <form action="/m_register",method = "post">
         <button type="submit">Register</button>
     </form>
   </div>
