--- a/templates/m_register.html
+++ b/templates/m_register.html
@@ -19,13 +19,13 @@
         </nav>
     </div>
     <div class="merchant-reg"><!--change class-name-->
-        <form action="" method="post">
+        <form action="/m_register" method="post">
             <input type="text" placeholder="name" required name="u_name">
             <input type="email" placeholder="email" required name="u_email">
             <input type="number" placeholder="phone_num" required name="phone_num">
             <input type="password" placeholder="password" required name="u_pwd">
             <input type="number" placeholder="percentage" required name="u_percent">
-            <button type="submit">Register</button>
+            <button type="submit" onclick="alert('registered')">Register</button>
         </form>
     </div>
 
