--- a/templates/u_login.html
+++ b/templates/u_login.html
@@ -20,12 +20,12 @@
     </div>
 
      <div class="user-login">
-        <form action="" method="post"> 
+        <form action="u_login" method="post"> 
             <input type="email" placeholder="email" required name="u_email">
             <input type="password" placeholder="password" required name="u_pwd">
             <button type="submit">Login</button>
         </form>
-        <form action="",method = "post">
+        <form action="u_register",method = "post">
             <button type="submit">Register</button>
         </form>
     </div>
