--- a/templates/m_login.html
+++ b/templates/m_login.html
@@ -19,14 +19,21 @@
         </nav>
     </div>
 
+    <div class="merchant-reg"><!--change class-name-->
+        <form action="/m_register" method="post">
+            <input type="text" placeholder="name" required name="u_name">
+            <input type="email" placeholder="email" required name="u_email">
+            <input type="number" placeholder="phone_num" required name="phone_num">
+            <input type="password" placeholder="password" required name="u_pwd">
+            <input type="number" placeholder="percentage" required name="u_percent">
+            <button type="submit" onclick="alert('registered')">Register</button>
+        </form>
+    </div>
  <div class="merchant-login">  <!--change class-name-->
     <form action="m_login", method="post">  
       <input type="email" placeholder="email" required name="u_email">
       <input type="password" placeholder="password" required name="u_pwd">
       <button type="submit">Login</button>
-    </form>
-    <form action="/m_register",method = "post">
-        <button type="submit">Register</button>
     </form>
   </div>
 
