--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@
 .items-div{
     float: left;
     width: 80%;
-    margin: 10% 0% 10% 10%;
+    margin: 10% 0% 17% 10%;
    /* border: 2px solid black;*/
 }
 
@@ -71,46 +71,50 @@
 
 
 /* USER-LOGIN*/
-.user-login, .merchant-login{
+.user-login, .merchant-login, .user-register, .merchant-reg{
     float: left;
     width: 50%;
-    margin: 10% 0% 15% 0%;
+    height: 560px;
+    background: url("../images/pls1.jpg");
 }
-.user-login input, .merchant-login input{
+.user-login h1, .merchant-login h1, .user-register h1, .merchant-reg h1{
     float: left;
-    width: 80%;
-    margin: 0% 0% 1% 50%;
+    width: 60%;
+    text-align: center;
+}
+.user-login input, .merchant-login input, .user-register input, .merchant-reg input{
+    float: left;
+    width: 60%;
+    margin: 5% 0% 1% 7%;
     padding: 1% 0% 1% 0%;
     font-size: 15px;
 }
-.user-login button, .merchant-login button{
+.user-login button, .merchant-login button, .merchant-reg button, .user-register button{
     float: left;
-    width: 20%;
+    width: 30%;
     border: 1px solid black; 
-    margin: 2% 0% 0% 80%;
+    margin: 2% 0% 0% 20%;
     font-size: 20px;
 }
 
-
-/* USER , MERCHANT -REGISTER */
-
-.user-register, .merchant-reg{
+.view-users{
     float: left;
-    width: 80%;
-    margin: 5% 0% 10% 10%;
-    border: 2px solid black;
+    width: 100%;
+    height: 520px;
+    margin: 3% 0% 0% 0%;
+    overflow-y: scroll;
 }
 
-.user-register input, .merchant-reg input{
+ .view-users table{
     float: left;
     width: 80%;
-    margin: 1% 0% 1% 10%;
-    padding: 1% 0% 1% 0%;
+    margin: 0% 0% 0% 10%;
     text-align: center;
 }
 
-.merchant-reg button, .user-register button{
-    float: left;
-    width: 40%;
-    margin: 0% 0% 1% 30%;
+.view-users thead{
+    font-size: 20px;
+}
+.view-users tbody{
+    font-size: 30px;
 }
