--- a/templates/mng_login.html
+++ b/templates/mng_login.html
@@ -16,31 +16,27 @@
             </ul>
         </nav>
     </div>
-    
+    <div class="merchant-login">
+        <form action="/mng_login" method="post">
+            <input type="text" placeholder="name" required name="u_name">
+            <input type="email"  placeholder="email" required name="u_email">
+            <input type="number"  placeholder="phone_num" required name="phone_num">
+            <input type="password" placeholder="password" required name="u_pwd">
+            <button type="submit">Submit</button>
+        </form>
+        </div>
  <div class="merchant-login">  <!--change class-name-->
-    <form action="login", method="post">  
+    <form action="mng_login", method="post">  
       <input type="email" placeholder="email" required name="u_email">
       <input type="password" placeholder="password" required name="u_pwd">
       <button type="submit">Login</button>
     </form>
-    <form action="",method = "post">
-        <button type="submit">Register</button>
-    </form>
   </div>
 
-<div class="user-login">
-    <form action="/m_login" method="post"> 
-        <input type="email" placeholder="email" required name="u_email">
-        <input type="password" placeholder="password" required name="u_pwd">
-        <button type="submit">Login</button>
-    </form>
-    <form action="/m_register",method = "post">
-        <button type="submit">Register</button>
-    </form>
-    </div>
 
 <div class="footer-div">
     <p>&copy; 2024||All Rights are reserved || Developed by  team 9</p>
 </div>
 
-</body></html>
+</body>
+</html>
