--- a/templates/u_login.html
+++ b/templates/u_login.html
@@ -19,15 +19,24 @@
         </nav>
     </div>
 
+    <div class="user-register">
+        <h1>Please register</h1>
+    <form action="/u_register" method="post">
+        <input type="text" placeholder="name" required name="u_name">
+        <input type="email"  placeholder="email" required name="u_email">
+        <input type="number"  placeholder="phone_num" required name="phone_num">
+        <input type="password" placeholder="password" required name="u_pwd">
+        <button type="submit">Submit</button>
+    </form>
+    </div>
      <div class="user-login">
+        <h1>Please login</h1>
         <form action="u_login" method="post"> 
             <input type="email" placeholder="email" required name="u_email">
             <input type="password" placeholder="password" required name="u_pwd">
             <button type="submit">Login</button>
         </form>
-        <form action="u_register",method = "post">
-            <button type="submit">Register</button>
-        </form>
+
     </div>
 
 <div class="footer-div">
